--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,12 @@ classifiers=[
 [tool.poetry.dependencies]
 python = "^3.6"
 blessed = "^1.17.4"
+repacolors = {version = "^0.5.0", optional = true}
+pillow = {version = "^7.1.2", optional = true}
+
+[tool.poetry.extras]
+colors = ["repacolors"]
+image = ["pillow"]
 
 [tool.poetry.scripts]
 repamatrix = 'repamatrix:main'
