--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,17 +14,22 @@ classifiers=[
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
-blessed = "^1.17.4"
+python = "^3.8"
+blessed = "^1.17.9"
 repacolors = {version = "^0.5.0", optional = true}
 pillow = {version = "^7.1.2", optional = true}
+opencv-contrib-python = {version = "^4.5.4", optional = true}
+numpy = {version = "^1.21", optional = true}
+mediapipe = {version = "^0.9.0", optional = true}
 
 [tool.poetry.extras]
 colors = ["repacolors"]
 image = ["pillow"]
+webcam = ["opencv-contrib-python", "numpy", "mediapipe"]
 
 [tool.poetry.scripts]
 repamatrix = 'repamatrix:main'
+webcammatrix = 'repamatrix.webcam:main'
 
 [build-system]
 requires = ["poetry>=0.12"]
